@@ -1,3 +1,10 @@
+2005-05-13  Tom Copeland  <tom@infoether.com>
+
+	* www/include/languages/Base.tab: Added new reporting items.
+	* www/reporting/useract_graph.php: Moved some strings to Base.tab
+	* www/reporting/projectact_graph.php: Moved some strings to Base.tab
+	* www/reporting/siteact_graph.php: Moved some strings to Base.tab
+
 2005-05-12  Tom Copeland  <tom@infoether.com>
 
 	* www/include/languages/Swedish.tab: Applied patch 1253 from Lennart
